Makefile can now run Problema2 and Problema3

--- a/Tarea_Prog_2/Makefile
+++ b/Tarea_Prog_2/Makefile
@@ -1,10 +1,16 @@
 
 	#rule to compile Problema1, 2 and 3
 build:
-	mpicc ./Problema2/MultMatVec.c o ./Problema2/Mult
+	mpicc ./Problema2/MultMatVec.c o ./bin/Mult
+	gcc -pthread pi_pthreads.c -o ./bin/P3_pi -lm
 
-	# make run_Problema2 processes = n
-run Problema2:
-	mpiexec -n $(processes) Mult
+# make "proc = n" run_Problema2
+run_Problema2 :
+	mpiexec -n $(proc) ./bin/Mult
 
-#run Problema3:
+# make "num_Dec = n" "num_Threads = m" run_Problema3
+run_Problema3:
+	./bin/P3_pi $(num_Dec) $(num_Threads)
+
+cleanup:
+	rm ./bin/*
